[package]
name = "slack-blocks-render"
version = "0.2.1"
authors = ["David Rousselie <david@rousselie.name>"]
edition = "2021"
license = "Apache-2.0"
description = "Slack blocks render is a Rust library to render Slack blocks as Markdown."
homepage = "https://github.com/dax/slack-blocks-render"
repository = "https://github.com/dax/slack-blocks-render"
keywords = ["slack", "markdown", "html"]

[lib]
path = "src/lib.rs"

[dependencies]
despatma = "0.3.0"
emojis = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
slack-morphism = { git = "https://github.com/dax/slack-morphism-rust", rev = "55ca1f2fdb47353bef58d2e82ce7fc7b7a859f79" }
url = "2.5"
